--- a/package.json
+++ b/package.json
@@ -16,19 +16,30 @@
   },
   "homepage": "https://github.com/robert-laws/project-apr-2021-lesson-plan-builder#readme",
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "^10.2.5",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss": "^8.2.10",
+    "postcss-cli": "^8.3.1",
+    "postcss-nested": "^5.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "tailwindcss": "^2.1.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm-run-all start:tailwind -l -p start:p:*",
+    "start:tailwind": "postcss ./src/assets/css/tailwind.src.css -o ./src/assets/css/tailwind.css",
+    "start:p:watch-tailwind": "onchange 'tailwind.config.js' 'src/**/*.css' -e './src/assets/css/tailwind.css' -- npm run start:tailwind",
+    "start:p:react": "react-scripts start",
+    "build": "run-s build:** -l",
+    "build:a:tailwind": "NODE_ENV=production npm run start:tailwind",
+    "build:b:react": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
