--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-nested": "^5.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwindcss": "^2.1.1",
     "web-vitals": "^1.1.1"
