--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "^10.2.5",
+    "immutability-helper": "^3.1.1",
     "js-cookie": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
@@ -27,6 +28,8 @@
     "postcss-cli": "^8.3.1",
     "postcss-nested": "^5.0.5",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
